[project]
name = "booyaa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hanabi-bro", email = "hanabi.bro@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "rich>=14.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "nuitka>=2.7.12",
    "pytest>=8.4.1",
    "zstandard>=0.23.0",
]
