[project]
name = "booyaa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hanabi-bro", email = "hanabi.bro@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "deep-translator>=1.11.4",
    "httpx>=0.28.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "paramiko>=3.5.1",
    "paramiko-expect>=0.3.5",
    "rich>=14.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "nuitka>=2.7.12",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "zstandard>=0.23.0",
]
